tests/paczka1/small_fuzzy/46620559.err
Error in line 16: uTFIXnJTM S200 280,60
